--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "NODE_ENV=production node server.js",
     "dev": "DEBUG=projet:* NODE_ENV=development npx nodemon server.js",
